--- a/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
@@ -1,13 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
+  <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\OrchardCore.Modules\OrchardCore.Contents\OrchardCore.Contents.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.csproj" />
   </ItemGroup>
-  <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.props" />
+
+  <ItemGroup>
+    <EmbeddedResource Include="Views\_ViewImports.cshtml"/>
+    <EmbeddedResource Include="Views\RobotsSettings.Edit.cshtml"/>
+  </ItemGroup>
 
   <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.targets" />
 </Project>
