--- a/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/ThisNetWorks.OrchardCore.Seo.Sitemapper.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/ThisNetWorks.OrchardCore.Seo.Sitemapper.csproj
@@ -26,11 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\OrchardCore.Modules\OrchardCore.Autoroute\OrchardCore.Autoroute.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.ContentManagement.Abstractions\OrchardCore.ContentManagement.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.ContentManagement.Display\OrchardCore.ContentManagement.Display.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.ContentTypes.Abstractions\OrchardCore.ContentTypes.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Data.Abstractions\OrchardCore.Data.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.csproj" />
+    <ProjectReference Include="..\ThisNetWorks.OrchardCore.Seo.Sitemapper.Abstractions\ThisNetWorks.OrchardCore.Seo.Sitemapper.Abstractions.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.targets" />
