basic meta data in. have used views rather than injecting with resourcemanager from driver, as I think it provides better options for alternates if/when theming /overriding of meta data is required

--- a/src/ThisNetWorks.OrchardCore.Seo.Meta/ThisNetWorks.OrchardCore.Seo.Meta.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Meta/ThisNetWorks.OrchardCore.Seo.Meta.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Data.Abstractions\OrchardCore.Data.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.DisplayManagement\OrchardCore.DisplayManagement.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.csproj" />
+    <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.ResourceManagement.Abstractions\OrchardCore.ResourceManagement.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
