--- a/src/ThisNetWorks.OrchardCore.Seo.FacebookMeta/ThisNetWorks.OrchardCore.Seo.FacebookMeta.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.FacebookMeta/ThisNetWorks.OrchardCore.Seo.FacebookMeta.csproj
@@ -4,6 +4,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\_ViewImports.cshtml">
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 
   <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.targets" />
 </Project>
