moving things around. think the best / easiest way to deal with opengraph (and google schema) will be to do them as OpenGraph and schema Widgets, provide a list, then you can put in what you need to build it up

--- a/src/ThisNetWorks.OrchardCore.Seo.OpenGraphMeta.Abstractions/ThisNetWorks.OrchardCore.Seo.OpenGraphMeta.Abstractions.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.OpenGraphMeta.Abstractions/ThisNetWorks.OrchardCore.Seo.OpenGraphMeta.Abstractions.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>ThisNetWorks.OrchardCore.Seo.FacebookMeta</RootNamespace>
+    <RootNamespace>ThisNetWorks.OrchardCore.Seo.OpenGraphMeta</RootNamespace>
   </PropertyGroup>
 
 </Project>
