--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <EmbeddedResource Include="placement.json">
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\TwitterMetaSettings.Edit.cshtml">
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </EmbeddedResource>
