missing project reference for autoroute

--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
@@ -22,6 +22,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\OrchardCore.Modules\OrchardCore.Autoroute\OrchardCore.Autoroute.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore.Modules\OrchardCore.Media\OrchardCore.Media.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.ContentManagement.Display\OrchardCore.ContentManagement.Display.csproj" />
     <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Data.Abstractions\OrchardCore.Data.Abstractions.csproj" />
