--- a/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
@@ -2,11 +2,12 @@
 
   <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+
   </ItemGroup>
 
   <ItemGroup>
