--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/ThisNetWorks.OrchardCore.Seo.TwitterMeta.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="placement.json">
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
