--- a/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Robots/ThisNetWorks.OrchardCore.Seo.Robots.csproj
@@ -1,24 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" />
 
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\OrchardCore.Modules\OrchardCore.Contents\OrchardCore.Contents.csproj" />
-    <ProjectReference Include="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.csproj" />
+    <ProjectReference Include="..\..\..\..\OrchardCore.Modules\OrchardCore.Contents\OrchardCore.Contents.csproj" />
+    <ProjectReference Include="..\..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Views\_ViewImports.cshtml"/>
-    <EmbeddedResource Include="Views\RobotsSettings.Edit.cshtml"/>
-  </ItemGroup>
-
-  <Import Project="..\..\..\OrchardCore\OrchardCore.Module.Targets\OrchardCore.Module.Targets.targets" />
 </Project>
