--- a/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/ThisNetWorks.OrchardCore.Seo.Sitemapper.csproj
+++ b/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/ThisNetWorks.OrchardCore.Seo.Sitemapper.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
-
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc"  />
-
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\OrchardCore.Modules\OrchardCore.Autoroute\OrchardCore.Autoroute.csproj" />
     <ProjectReference Include="..\..\..\..\OrchardCore\OrchardCore.ContentManagement.Abstractions\OrchardCore.ContentManagement.Abstractions.csproj" />
